--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <service
             android:name=".IncrementService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"
+            android:process=":incrementProcess" />
 
         <activity
             android:name=".MainActivity"
